--- a/config.yaml
+++ b/config.yaml
@@ -2,4 +2,7 @@ camera_id: 1  # facultative
 regex: "CODE-(?<numericPart>\\d+)"  # RegEx for barcode parsing
 input_position: [500, 300]  # coords of input field
 window_title: "Capture"
+sound:
+  success: "sound/ok.mp3"
+  lost: "sound/lost.mp3"
 
